# photonics_matchmaker

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
.devcontainer/: devcontainer.json
components/: faq.py  sidebar.py
core/: keyword.py  summarizer.py  utils.py
data/: pro_resme_1.txt  student_resume_1.txt
photonics_match_maker/components/: sidebar.py
photonics_match_maker/core/: embedding.py  keyword_extraction.py  language_model.py  text_summarization.py
photonics_matchmaker/: main.py
photonics_matchmaker/components/: faq.py
photonics_matchmaker/core/: data_processing.py
photonics_matchmaker/utils/: helpers.py
