[tool.poetry]
name = "photonics_match_maker"
version = "0.1.0"
description = "Accurately run matchmaking between comapnies and professionals in the photonics industry"
authors = ["goldenglorys <olusolagloryolamide@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "photonics_match_maker"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
groq = "^0.9.0"
st-gsheets-connection = "^0.0.4"
scikit-learn = "^1.5.0"
pypdf2 = "^3.0.1"
docx2txt = "^0.8"
sentence-transformers = "^3.0.1"
langchain = "^0.2.5"
langchain-groq = "^0.1.5"
sumy = "^0.11.0"
keybert = "^0.8.5"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
